--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.13.0",
     "axios": "^1.7.3",
+    "dayjs": "^1.11.12",
+    "dexie": "^4.0.8",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/lokijs": "^1.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
