--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.13.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "dayjs": "^1.11.12",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
